Change units from Fahrenheit to Celsius.
Add Singapore to the list.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="visual">
           <div class="icon"></div>
           <div class="temperature">
-            <span class="value"></span><span class="scale">°F</span>
+            <span class="value"></span><span class="scale">°C</span>
           </div>
         </div>
         <div class="description">
           <div class="humidity"></div>
           <div class="wind">
             <span class="value"></span>
-            <span class="scale">mph</span>
+            <span class="scale">km/h</span>
             <span class="direction"></span>°
           </div>
           <div class="sunrise"></div>
@@ -159,6 +159,7 @@
           <option value="2475687">Portland, OR</option>
           <option value="2487956">San Francisco, CA</option>
           <option value="2490383">Seattle, WA</option>
+          <option value="1062617">Singapore, Singapore</option>
         </select>
       </div>
       <div class="dialog-buttons">
